--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint": "^2.10.2",
     "glob-expand": "0.2.1",
     "istanbul": "^0.3.17",
-    "mocha-runner": "^1.0.8",
+    "mocha-runner": "2.0.0",
     "precommit": "1.2.2",
     "prepush": "3.1.11",
     "proxyquire": "^1.6.0",
@@ -70,9 +70,7 @@
   "dependencies": {
     "babel-code-frame": "6.26.0",
     "chalk": "^2.0.1",
-    "coalescy": "1.0.0",
     "extend": "^3.0.0",
-    "minimist": "^1.2.0",
     "strip-ansi": "^4.0.0",
     "text-table": "^0.2.0"
   },
